openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  type: LoadBalancer
  selector:
    app: java-deployment
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
