openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: java-deployment
spec:
  to:
    kind: Service
    name: java-service
  port:
    targetPort: 8081
  tls:
    termination: edge
  wildcardPolicy: None
